--- a/amazon.html
+++ b/amazon.html
@@ -58,9 +58,7 @@
   </div>
   <script src="scripts/cart.js"></script>
   <script src="scripts/products.js"></script>
-  <script src="scripts/amazon.js">
-
-  </script>
+  <script src="scripts/amazon.js"></script>
 </body>
 
 </html>
